--- a/css/app.css
+++ b/css/app.css
@@ -14314,12 +14314,37 @@ header {
   margin: 0 auto 2rem;
 }
 
+.round-top-spring-2021-section .vendor-logos {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+@media print, screen and (min-width: 40em) {
+  .round-top-spring-2021-section .vendor-logos {
+    max-width: none;
+  }
+}
+
 .round-top-spring-2021-section img.excess-field-logo {
   max-width: 200px;
+  margin-bottom: 32px;
+}
+
+@media print, screen and (min-width: 40em) {
+  .round-top-spring-2021-section img.excess-field-logo {
+    margin-bottom: 0;
+    padding-right: 16px;
+  }
 }
 
 .round-top-spring-2021-section img.bader-ranch-logo {
   max-width: 240px;
+}
+
+@media print, screen and (min-width: 40em) {
+  .round-top-spring-2021-section img.bader-ranch-logo {
+    padding-left: 16px;
+  }
 }
 
 .example {
