--- a/scss/pages/index/_round-top-spring-2021.scss
+++ b/scss/pages/index/_round-top-spring-2021.scss
@@ -14,11 +14,30 @@
 		margin: 0 auto rem-calc(32);
 	}
 
+	.vendor-logos {
+		max-width: 400px;
+		margin: 0 auto;
+
+		@include breakpoint(medium) {
+			max-width: none;
+		}
+	}
+
 	img.excess-field-logo {
 		max-width: 200px;
+		margin-bottom: 32px;
+
+		@include breakpoint(medium) {
+			margin-bottom: 0;
+			padding-right: 16px;
+		}
 	}
 
 	img.bader-ranch-logo {
 		max-width: 240px;
+
+		@include breakpoint(medium) {
+			padding-left: 16px;
+		}
 	}
 }
