--- a/scss/pages/index/_round-top-spring-2021.scss
+++ b/scss/pages/index/_round-top-spring-2021.scss
@@ -11,15 +11,28 @@
 
 	.p {
 		max-width: rem-calc(320);
-		margin: 0 auto rem-calc(32);
+		margin-bottom: rem-calc(32);
+	}
+
+	.prose-wrap {
+		@include breakpoint(960) {
+			float: left;
+			padding: 0 32px;
+		}
 	}
 
 	.vendor-logos {
 		max-width: 400px;
 		margin: 0 auto;
+		text-align: center;
 
 		@include breakpoint(medium) {
 			max-width: none;
+		}
+
+		@include breakpoint(960) {
+			text-align: unset;
+			padding-top: rem-calc(20);
 		}
 
 		img.excess-field-logo {
