--- a/scss/pages/index/_nav-medium.scss
+++ b/scss/pages/index/_nav-medium.scss
@@ -5,11 +5,11 @@
 			top: 0;
 			left: 0;
 
-			img {
+			img.logo-pot {
 				max-width: 55px;
 			}
 
-			h1 {
+			.wordmark {
 				text-shadow: 0 6px 10px rgba(0, 0, 0, .3);
 				color: #fefefe;
 				font-size: rem-calc(50);
