Tweak wordmark visibility via mediaquery

--- a/scss/pages/index/_nav-medium.scss
+++ b/scss/pages/index/_nav-medium.scss
@@ -22,6 +22,11 @@
 				left: rem-calc(8);
 				display: none;
 				visibility: hidden;
+
+				@include breakpoint(720) {
+					display: block;
+					visibility: visible;
+				}
 			}
 		}
 
