--- a/css/app.css
+++ b/css/app.css
@@ -14225,6 +14225,16 @@ header {
     display: none;
     visibility: hidden;
   }
+}
+
+@media screen and (min-width: 40em) and (max-width: 63.99875em) and (min-width: 45em) {
+  #main-menu.top-bar .logo-wrap .wordmark {
+    display: block;
+    visibility: visible;
+  }
+}
+
+@media screen and (min-width: 40em) and (max-width: 63.99875em) {
   #main-menu.top-bar .menu a {
     color: #fff;
     font-weight: bold;
