--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -27,9 +27,9 @@
 	  "@context": "http://schema.org",
 	  "@type": "LocalBusiness",
 	  "name": "Jardin de France",
-	  "logo": "http://jardindefrancetx.com/img/assets/logo/schema/jardin-de-france-logo.png",
+	  "logo": "https://jardindefrancetx.com/img/assets/logo/schema/jardin-de-france-logo.png",
 	  "description": "Bringing to Houston the beauty of original French Country antiques &amp; quaint garden design",
-	  "url" : "http://jardindefrancetx.com",
+	  "url" : "https://jardindefrancetx.com",
 	  "telephone": "832-651-3136",
 	  "address": {
 	    "@type": "PostalAddress",
@@ -39,7 +39,6 @@
 	    "streetAddress": "4819 Blossom St"
 	  },
 	  "sameAs" : [
-	    "https://www.google.com/+JardindeFranceHouston",
 	    "https://www.pinterest.com/lebasi68/jardin-de-france/",
 	    "https://www.instagram.com/jardindefrancetx/"
 	  ]
