Restructure scss for index cleanup

--- a/scss/pages/index/_index.scss
+++ b/scss/pages/index/_index.scss
@@ -1,7 +1,7 @@
 @import 'old/_old.scss';
 
-@import '_old-index.scss';
-@import '_old-header.scss';
+// @import '_old-index.scss';
+// @import '_old-header.scss';
 
 @import '_splash.scss';
 @import '_nav-small.scss';
