Null whole partial bc not used

--- a/scss/pages/index/old/_old-header.scss
+++ b/scss/pages/index/old/_old-header.scss
@@ -1,11 +1,11 @@
-header {
-	background: #697b99;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .3);
-	height: 55px;
-	width: 100%;
-	position: fixed;
-	z-index: 100;
-}
+// header {
+// 	background: #697b99;
+// 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .3);
+// 	height: 55px;
+// 	width: 100%;
+// 	position: fixed;
+// 	z-index: 100;
+// }
 
 // .logo img {
 // 	position: absolute;
@@ -23,22 +23,22 @@ header {
 // 	font-size: 60px;
 // }
 
-@media screen and (min-width: 751px) {
-	.logo h1 {
-		display: none;
-		visibility: hidden;
-	}
-}
+// @media screen and (min-width: 751px) {
+// 	.logo h1 {
+// 		display: none;
+// 		visibility: hidden;
+// 	}
+// }
 
-@media screen and (min-width: 920px) {
-	.logo h1 {
-		display: block;
-		visibility: visible;
-	}
-}
+// @media screen and (min-width: 920px) {
+// 	.logo h1 {
+// 		display: block;
+// 		visibility: visible;
+// 	}
+// }
 
-@media only screen and (min-width : 40em) {
-	.logo h1 {
-		font-size: 70px;
-	}
-}
+// @media only screen and (min-width : 40em) {
+// 	.logo h1 {
+// 		font-size: 70px;
+// 	}
+// }
