Tweak more spacing

--- a/css/app.css
+++ b/css/app.css
@@ -14296,6 +14296,9 @@ body {
 
 .round-top-spring-2021-section .p {
   max-width: 20rem;
+}
+
+.round-top-spring-2021-section .prose-wrap {
   margin-bottom: 2rem;
 }
 
