@small logo-wrap progress

--- a/css/app.css
+++ b/css/app.css
@@ -14328,6 +14328,14 @@ body {
   }
 }
 
+.round-top-spring-2021-section #bader-ranch.logo-wrap {
+  margin-bottom: 4rem;
+}
+
+.round-top-spring-2021-section #excess-field.logo-wrap {
+  margin-bottom: 2rem;
+}
+
 .round-top-spring-2021-section img.excess-field-logo {
   max-width: 200px;
 }
