--- a/scss/pages/index/_round-top-spring-2021.scss
+++ b/scss/pages/index/_round-top-spring-2021.scss
@@ -53,6 +53,14 @@
 		// }
 	}
 
+	.logo-wrap#bader-ranch {
+		margin-bottom: rem-calc(64);
+	}
+
+	.logo-wrap#excess-field {
+		margin-bottom: rem-calc(32);
+	}
+
 	img.excess-field-logo {
 		max-width: 200px;
 	}
