--- a/css/app.css
+++ b/css/app.css
@@ -14328,12 +14328,25 @@ body {
   }
 }
 
+@media print, screen and (min-width: 40em) {
+  .round-top-spring-2021-section .logo-wrap {
+    margin-bottom: 0;
+  }
+}
+
 .round-top-spring-2021-section #bader-ranch.logo-wrap {
   margin-bottom: 4rem;
 }
 
 .round-top-spring-2021-section #excess-field.logo-wrap {
   margin-bottom: 2rem;
+}
+
+@media print, screen and (min-width: 40em) {
+  .round-top-spring-2021-section #bader-ranch.logo-wrap,
+.round-top-spring-2021-section #excess-field.logo-wrap {
+    margin-bottom: 0;
+  }
 }
 
 .round-top-spring-2021-section img.excess-field-logo {
