Spacing all set

--- a/scss/pages/index/_round-top-spring-2021.scss
+++ b/scss/pages/index/_round-top-spring-2021.scss
@@ -20,6 +20,14 @@
 			float: left;
 			padding: 0 rem-calc(16) 0 rem-calc(32);
 		}
+
+		@include breakpoint(1000) {
+			padding: 0 rem-calc(32);
+		}
+
+		@include breakpoint(1100) {
+			padding: 0 rem-calc(32) 0 rem-calc(64);
+		}
 	}
 
 	.vendor-logos {
