--- a/css/app.css
+++ b/css/app.css
@@ -14309,6 +14309,18 @@ body {
   }
 }
 
+@media screen and (min-width: 62.5em) {
+  .round-top-spring-2021-section .prose-wrap {
+    padding: 0 2rem;
+  }
+}
+
+@media screen and (min-width: 68.75em) {
+  .round-top-spring-2021-section .prose-wrap {
+    padding: 0 2rem 0 4rem;
+  }
+}
+
 .round-top-spring-2021-section .vendor-logos {
   max-width: 400px;
   margin: 0 auto;
