--- a/scss/elements/typography/_font-face.scss
+++ b/scss/elements/typography/_font-face.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
 @import url('https://use.typekit.net/yrz5wte.css');
 
 // font-family: 'Parisienne', cursive;
