--- a/scss/elements/typography/_font-face.scss
+++ b/scss/elements/typography/_font-face.scss
@@ -1,6 +1,17 @@
 // @import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
 @import url('https://use.typekit.net/yrz5wte.css');
 
+// Generated via google-webfonts-helper
+// https://google-webfonts-helper.herokuapp.com/fonts/parisienne?subsets=latin
+@font-face {
+	font-family: 'Parisienne';
+	font-style: normal;
+	font-weight: 400;
+	src: local(''),
+		  url('/fonts/parisienne/parisienne-v8/parisienne.woff2') format('woff2'),
+		  url('/fonts/parisienne/parisienne-v8/parisienne.woff') format('woff');
+}
+
 @font-face {
 	font-family: 'nav';
 	src: url('/fonts/nav/nav.eot');
