--- a/css/app.css
+++ b/css/app.css
@@ -14153,6 +14153,7 @@ body {
     padding: 12px 16px;
   }
   #main-menu.top-bar .menu a.is-active {
+    background: #fffeb3;
     text-decoration: underline;
   }
 }
