--- a/scss/pages/index/old/_old-index.scss
+++ b/scss/pages/index/old/_old-index.scss
@@ -164,6 +164,10 @@ body {
 .location-banner {
 	padding: 90px 0;
 	background: linear-gradient(rgba(105, 123, 153, .5), rgba(105, 123, 153, .5)), url('/img/index-2/location/location.jpg') center center/cover no-repeat;
+
+	@include breakpoint(medium down) {
+		border-top: 20px solid #fff;
+	}
 }
 
 .location-banner .contact-info {
