--- a/css/app.css
+++ b/css/app.css
@@ -13983,7 +13983,7 @@ body {
   }
 }
 
-.roundTop-section #masonryGrid .tile img {
+.roundTop-section #masonry-grid .tile img {
   -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
           box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
   border-radius: 4px;
