--- a/scss/pages/index/old/_old-index.scss
+++ b/scss/pages/index/old/_old-index.scss
@@ -294,7 +294,7 @@ body {
 	}
 }
 
-.roundTop-section #masonryGrid .tile img {
+.roundTop-section #masonry-grid .tile img {
 	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
 	border-radius: 4px;
 	border: 4px solid #fefefe;
