--- a/css/app.css
+++ b/css/app.css
@@ -14402,6 +14402,13 @@ body {
   max-width: 240px;
 }
 
+#masonryGrid .tile .tileBase {
+  -webkit-box-shadow: 0 0.0625rem 0.25rem 0 rgba(0, 0, 0, 0.37);
+          box-shadow: 0 0.0625rem 0.25rem 0 rgba(0, 0, 0, 0.37);
+  background: #fff;
+  border-radius: 0.25rem;
+}
+
 .example {
   display: grid;
   -webkit-transition: all .5s;
