--- a/src/partials/scripts-tag.html
+++ b/src/partials/scripts-tag.html
@@ -1,3 +1,4 @@
+<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script>
 	$('#masonryGrid').masonry({
