--- a/src/partials/scripts-tag.html
+++ b/src/partials/scripts-tag.html
@@ -1,7 +1,9 @@
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script>
-	$('#masonryGrid').masonry({
-		itemSelector: '#masonryGrid .tile'
+	$('#masonryGrid').imagesLoaded( function() {
+		$('#masonryGrid').masonry({
+			itemSelector: '#masonryGrid .tile'
+		});
 	});
 </script>
