Add assets via github raw

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -44,6 +44,10 @@
 	  ]
 	}
 	</script>
+
+	<!-- Magnific Popup core CSS file -->
+	<link rel="stylesheet" href="https://raw.githubusercontent.com/dimsemenov/Magnific-Popup/master/dist/magnific-popup.css">
+
 </head>
 <body id="{{ body-id }}" class="{{ body-class }}">
 
