--- a/src/partials/scripts-tag.html
+++ b/src/partials/scripts-tag.html
@@ -7,3 +7,6 @@
 		});
 	});
 </script>
+
+<!-- Magnific Popup core JS file -->
+<script src="https://raw.githubusercontent.com/dimsemenov/Magnific-Popup/master/dist/jquery.magnific-popup.min.js"></script>
