Add files and integrate

--- a/src/partials/scripts-tag.html
+++ b/src/partials/scripts-tag.html
@@ -9,4 +9,10 @@
 </script>
 
 <!-- Magnific Popup core JS file -->
-<script src="https://raw.githubusercontent.com/dimsemenov/Magnific-Popup/master/dist/jquery.magnific-popup.min.js"></script>
+<script src="/js/vendor/magnific-popup/jquery-magnific-popup-min.js"></script>
+
+<script>
+	$('.test-popup-link').magnificPopup({
+		type: 'image'
+	});
+</script>
