Add gallery option

--- a/src/partials/scripts-tag.html
+++ b/src/partials/scripts-tag.html
@@ -17,6 +17,9 @@
 	// });
 	$('.tileBase').magnificPopup({
 		delegate: 'a', // child items selector, by clicking on it popup will open
-		type: 'image'
+		type: 'image',
+		gallery:{
+			enabled:true
+		}
 	});
 </script>
