--- a/src/partials/scripts-tag.html
+++ b/src/partials/scripts-tag.html
@@ -17,6 +17,12 @@
 		type: 'image',
 		gallery:{
 			enabled:true
-		}
+		},
+disableOn: function() {
+  if( $(window).width() < 640 ) {
+    return false;
+  }
+  return true;
+}
 	});
 </script>
