--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -46,7 +46,7 @@
 	</script>
 
 	<!-- Magnific Popup core CSS file -->
-	<link rel="stylesheet" href="/css/magnific-popup.css">
+	<!-- <link rel="stylesheet" href="/css/magnific-popup.css"> -->
 
 </head>
 <body id="{{ body-id }}" class="{{ body-class }}">
