--- a/src/partials/scripts-tag.html
+++ b/src/partials/scripts-tag.html
@@ -1,5 +1,5 @@
-<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<!-- <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script> -->
+<!-- <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script> -->
 <script>
 	$('#masonryGrid').imagesLoaded( function() {
 		$('#masonryGrid').masonry({
